--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-Run python assemble.py > foo.ly and compile foo.ly using LilyPond.
+Run:
+python assemble.py > foo.ly
+and compile foo.ly using LilyPond.
